--- a/public/css/DropdownFilter.scss
+++ b/public/css/DropdownFilter.scss
@@ -21,16 +21,17 @@
 
   button {
     padding: 10px;
-    background-color: #4caf50;
+    background-color: var(--color-olive);
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     font-weight: bold;
-  }
+    transition: background-color 0.3s ease;
 
-  button:hover {
-    background-color: #45a049;
+    &:hover {
+      background-color: var(--color-tan);
+    }
   }
 
   @media (min-width: 768px) {
