--- a/public/css/Chatbot.css
+++ b/public/css/Chatbot.css
@@ -81,6 +81,30 @@
     align-self: flex-start;
 }
 
+/* Typing Animation */
+.message.typing span {
+    display: inline-block;
+    animation: typing 1.5s infinite;
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+.message.typing span:nth-child(1) {
+    animation-delay: 0s;
+}
+.message.typing span:nth-child(2) {
+    animation-delay: 0.3s;
+}
+.message.typing span:nth-child(3) {
+    animation-delay: 0.6s;
+}
+
+@keyframes typing {
+    0% { opacity: 0.3; }
+    50% { opacity: 1; }
+    100% { opacity: 0.3; }
+}
+
 /* Chatbox Input */
 .chatbox-input {
     display: flex;
