--- a/public/css/Signup.css
+++ b/public/css/Signup.css
@@ -1,8 +1,4 @@
-:root {
-  --color-tan: #b3a589;
-  --color-olive: #8b9a72;
-  --color-sage: #b2bea2;
-}
+
 
 body {
   font-family: Georgia, "Times New Roman", Times, serif;
@@ -49,8 +45,7 @@ body {
   color: #333;
 }
 
-.form-group input[type="text"],
-.form-group input[type="password"] {
+.form-group input {
   padding: 0.8rem;
   border: 1px solid #ddd;
   border-radius: 4px;
@@ -149,5 +144,6 @@ button[type="submit"]:hover {
 
   .signup-photo img {
     max-width: 100%;
+    height: 20em;
   }
 }
