--- a/public/css/Home.css
+++ b/public/css/Home.css
@@ -160,7 +160,7 @@ a:hover {
 .cta h2 {
   font-size: 2.2rem;
   margin-bottom: 1.5rem;
-  color: var(--color-sage);
+  color: var(--color-olive);
 }
 
 .cta p {
@@ -215,6 +215,12 @@ a:hover {
     gap: 2rem;
   }
 
+  .feature-cards > *:last-child:nth-child(odd) {
+    grid-column: 1 / -1;
+    justify-self: center;
+    max-width: 35rem;
+  }
+
   .about-content {
     gap: 2.5rem;
   }
@@ -226,6 +232,10 @@ a:hover {
   .about-content,
   .feature-cards {
     padding: 0 25px;
+  }
+
+  .feature-cards > *:last-child:nth-child(odd) {
+    max-width: 28rem;
   }
 
   .about-content {
@@ -268,7 +278,9 @@ a:hover {
     grid-template-columns: 1fr 1fr;
     gap: 1.5rem;
   }
-
+  .feature-cards > *:last-child:nth-child(odd) {
+    max-width: 25rem;
+  }
   .homecard-image img {
     height: 200px;
   }
@@ -307,6 +319,10 @@ a:hover {
   .feature-cards {
     grid-template-columns: 1fr;
     gap: 1.5rem;
+  }
+
+  .feature-cards > *:last-child:nth-child(odd) {
+    max-width: 40rem;
   }
 
   .homecard-image img {
