--- a/public/css/PlantsPage.scss
+++ b/public/css/PlantsPage.scss
@@ -1,5 +1,3 @@
-
-
 .plants {
   padding: 2rem;
   background-color: #f9f7f2;
@@ -42,8 +40,8 @@
   }
 
   .plants-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    display: flex; // Changed from grid to flex
+    flex-wrap: wrap; // Allow wrapping of items
     gap: 2rem;
     padding: 1rem;
     justify-content: center;
